--- a/app/views/layouts/main.html
+++ b/app/views/layouts/main.html
@@ -4,6 +4,7 @@
     <head>
         <base href="../../../" target="_blank">
         <link href="./app/assets/style/main.css" rel="stylesheet"/>
+        <link href="./app/assets/style/theme.css" rel="stylesheet"/>
         <script src="./app/modules/ext/dom.js" type="text/javascript"></script>
         <script src="./app/modules/ext/customelements.js" type="text/javascript"></script>
         <script src="./app/assets/script/main.js" type="text/javascript"></script>
