--- a/app/assets/style/main.css
+++ b/app/assets/style/main.css
@@ -19,6 +19,12 @@ x-layout{
     overflow: auto;
 }
 
+x-view{
+    height: 100%;
+    width: 100%;
+    display: block;
+}
+
 
 x-layout[data-showing]{
     animation: LayoutShowingAnimation 500ms forwards;
@@ -37,12 +43,10 @@ x-layout[data-dismissing]{
     0% {
         transform: scale( .95 );
         opacity: 0;
-        visibility: visible;
         pointer-events: none;
     } 100% {
         transform: scale( 1 );
         opacity: 1;
-        visibility: visible;
         pointer-events: none;
     }
 }
@@ -50,12 +54,10 @@ x-layout[data-dismissing]{
     0% {
         transform: scale( 1 );
         opacity: 1;
-        visibility: visible;
         pointer-events: none;
     } 100% {
         transform: scale( .95 );
         opacity: 0;
-        visibility: visible;
         pointer-events: none;
     }
 }
@@ -63,7 +65,6 @@ x-layout[data-dismissing]{
 x-tooltip{
     position: absolute;
     opacity: 0;
-    visibility: hidden;
     pointer-events: none;
 
     white-space: nowrap;
@@ -75,10 +76,12 @@ x-tooltip{
 
     -webkit-transition-property: opacity; /* Safari */
     -webkit-transition-duration: .3s; /* Safari */
-    -webkit-transition-delay: 1s; /* Safari */
+    -webkit-transition-delay: 0s; /* Safari */
     transition-property: opacity;
     transition-duration: .3s;
-    transition-delay: 1s;
+    transition-delay: 0s;
+
+    z-index: 10000;
 }
 
 x-tooltip.right{
@@ -108,6 +111,8 @@ x-tooltip.center{
 }
 
 [data-has-tooltip]:hover x-tooltip{
+    -webkit-transition-delay: 1s;
+    transition-delay: 1s;
     opacity: 1;
     visibility: visible;
     pointer-events: all;
@@ -120,7 +125,13 @@ x-menu{
 x-menu-item{
     height: 50px;
     width: 50px;
+    margin: 10px;
     display: block;
+
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .pull-left{
@@ -139,6 +150,9 @@ x-menu-item{
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    box-sizing: border-box;
+
+    cursor: pointer;
 }
 .btn.large{
     height: 75px;
@@ -159,24 +173,24 @@ x-menu-item{
     border-radius: 100%;
 }
 
-.btn.dark{
+/* .btn.dark{
 
 }
-.btn-light{
+.btn.light{
     color: #777;
     border-color: #777;
 }
 
-.btn-light:hover{
+.btn.light:hover{
     color: white;
     border-color: white;
-}
+} */
 
-.btn.transparent{
+
+
+/*.btn.transparent{
     background-color: transparent;
-}
-
-
+} */
 
 
 .column{
