--- a/app/views/default/_content_search.html
+++ b/app/views/default/_content_search.html
@@ -1,3 +1,3 @@
-<div class='column w12' style='background-color: #222; color: #f2f2f2; padding: 10px; box-sizing: border-box'>
-    content search
-</div>
+<div class='column w12' style='background-color: #333; color: #f2f2f2; padding: 10px; box-sizing: border-box'>
+    <!-- content search -->
+<!-- </div> -->
